--- a/index.html
+++ b/index.html
@@ -3,19 +3,17 @@
 
     <head>
         <title>Asha Jotwani</title>
-        <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="main.css">
     </head>
 
     <body>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
+
+        <br/><br/><br/><br/><br/><br/><br/><br/>
 
         <center>
-            <h1>Asha's Personal Website</h1>
-            <h2>Coming Soon</h2>
+            <h2>Asha's Personal Website</h2>
+            <h1>Under Construction - Coming Soon</h1>
         </center>
 
     </body>
